- 精選專案列表

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MMP 專業程式開發團隊</title>
+    <meta
+      name="description"
+      content="我們是 MMP 專業程式開發團隊，無論是專案開發、網站架設還是 APP 開發上的困難，我們都能為您提供解決方案。若您在程式或架站方面遇到問題，隨時歡迎與我們聯繫。"
+    />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -30,14 +34,79 @@
       </div>
     </nav>
     <main class="w-screen px-3.75 md:px-10">
-      <div class="w-full max-w-(--maxWidth-page) m-auto flex flex-col gap-5">
+      <div
+        class="w-full max-w-(--maxWidth-page) m-auto mb-10 flex flex-col gap-5"
+      >
         <div class="text-center text-xl font-bold">Project</div>
         <div class="flex justify-center items-center gap-7.5">
           <hr class="bg-black" width="60" />
-          <span class="text-3xl font-medium">實作專案</span>
+          <span class="text-2xl font-medium">精選專案</span>
           <hr class="bg-black" width="60" />
         </div>
-        <div class="flex flex-col gap-10"></div>
+        <div class="flex flex-col gap-10">
+          <figure>
+            <a
+              href="https://web.bc3ts.net/"
+              target="_blank"
+              rel="nofollow noopener noreferrer"
+            >
+              <img
+                class="w-full"
+                src="/images/project/banner/bc3ts.png"
+                alt="爆料公社"
+              />
+            </a>
+            <figcaption class="hidden"></figcaption>
+          </figure>
+          <figure>
+            <img
+              class="w-full"
+              src="/images/project/banner/Archie's Garden.png"
+              alt="Archie's Garden 植物形象網站"
+            />
+            <figcaption class="hidden"></figcaption>
+          </figure>
+          <figure>
+            <img
+              class="w-full"
+              src="/images/project/banner/MSQY.png"
+              alt="MSQY 咖啡形象網站"
+            />
+            <figcaption class="hidden"></figcaption>
+          </figure>
+          <figure>
+            <img
+              class="w-full"
+              src="/images/project/banner/Quapni.png"
+              alt="Quapni 形象網站"
+            />
+            <figcaption class="hidden"></figcaption>
+          </figure>
+          <figure>
+            <img
+              class="w-full"
+              src="/images/project/banner/Donutes POS.png"
+              alt="Donutes 飲料業 POS"
+            />
+            <figcaption class="hidden"></figcaption>
+          </figure>
+          <figure>
+            <img
+              class="w-full"
+              src="/images/project/banner/Funcom POS.png"
+              alt="楓康 零售業 POS"
+            />
+            <figcaption class="hidden"></figcaption>
+          </figure>
+          <figure>
+            <img
+              class="w-full"
+              src="/images/project/banner/Taipei dbas.png"
+              alt="臺北市預算查詢平台"
+            />
+            <figcaption class="hidden"></figcaption>
+          </figure>
+        </div>
       </div>
     </main>
     <footer class="text-white bg-black w-screen text-center">
@@ -45,13 +114,27 @@
         <div>
           <a class="text-3xl font-bold" href="/">MMP Team</a>
         </div>
-        <div class="text-xl font-medium">與我們聯繫 py36032@gmail.com</div>
+        <div class="text-xl font-medium">
+          與我們聯繫 <a href="mailto:mars@newkans.com">mars@newkans.com</a>
+        </div>
       </div>
       <div class="px-3.75 md:px-10 py-10 border-t-2 border-white">
         <span class="text-base font-bold"
-          >CopyRight © 2025 Penny Chu All Rights Reserved.</span
+          >CopyRight © 2025 MMP Team All Rights Reserved.</span
         >
       </div>
     </footer>
+
+    <!-- <script src="https://scripts.sirv.com/sirv.js"></script>
+    <div class="Sirv" data-src="https://demo.sirv.com/drill/drill.spin"></div>
+    <script>
+      fetch('https://httpbin.org/get')
+        .then(function (res) {
+          return res.json();
+        })
+        .then(function (res) {
+          console.log(res);
+        });
+    </script> -->
   </body>
 </html>
