--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             >
               <img
                 class="w-full"
-                src="/images/project/banner/bc3ts.png"
+                src="./images/project/banner/bc3ts.png"
                 alt="爆料公社"
               />
             </a>
@@ -61,7 +61,7 @@
           <figure>
             <img
               class="w-full"
-              src="/images/project/banner/Archie's Garden.png"
+              src="./images/project/banner/Archie's Garden.png"
               alt="Archie's Garden 植物形象網站"
             />
             <figcaption class="hidden"></figcaption>
@@ -69,7 +69,7 @@
           <figure>
             <img
               class="w-full"
-              src="/images/project/banner/MSQY.png"
+              src="./images/project/banner/MSQY.png"
               alt="MSQY 咖啡形象網站"
             />
             <figcaption class="hidden"></figcaption>
@@ -77,7 +77,7 @@
           <figure>
             <img
               class="w-full"
-              src="/images/project/banner/Quapni.png"
+              src="./images/project/banner/Quapni.png"
               alt="Quapni 形象網站"
             />
             <figcaption class="hidden"></figcaption>
@@ -85,7 +85,7 @@
           <figure>
             <img
               class="w-full"
-              src="/images/project/banner/Donutes POS.png"
+              src="./images/project/banner/Donutes POS.png"
               alt="Donutes 飲料業 POS"
             />
             <figcaption class="hidden"></figcaption>
@@ -93,7 +93,7 @@
           <figure>
             <img
               class="w-full"
-              src="/images/project/banner/Funcom POS.png"
+              src="./images/project/banner/Funcom POS.png"
               alt="楓康 零售業 POS"
             />
             <figcaption class="hidden"></figcaption>
@@ -101,7 +101,7 @@
           <figure>
             <img
               class="w-full"
-              src="/images/project/banner/Taipei dbas.png"
+              src="./images/project/banner/Taipei dbas.png"
               alt="臺北市預算查詢平台"
             />
             <figcaption class="hidden"></figcaption>
