--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       content="我們是 MMP 專業程式開發團隊，無論是專案開發、網站架設還是 APP 開發上的困難，我們都能為您提供解決方案。若您在程式或架站方面遇到問題，隨時歡迎與我們聯繫。"
     />
 
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
