- Navbar button style

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="block md:hidden">
           <button
             id="btn-navbar"
-            class="flex items-center px-3 py-2 border rounded text-teal-200 border-teal-400 hover:text-white hover:border-white"
+            class="flex items-center px-3 py-2 border rounded text-white border-white hover:gray-300 hover:border-gray-300"
           >
             <svg
               class="fill-current h-3 w-3"
