- 更換 Quapni project banner 圖片

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
           <figure>
             <img
               class="w-full"
-              src="./images/project/banner/Quapni.png"
-              alt="Quapni 形象網站"
+              src="./images/project/banner/Quapni_Website.png"
+              alt="Quapni 品牌形象網站"
             />
             <figcaption class="hidden"></figcaption>
           </figure>
