--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
           <figure>
             <img
               class="w-full"
-              src="./images/project/banner/Quapni_Website.png"
-              alt="Quapni 品牌形象網站"
+              src="./images/project/banner/Quapni.png"
+              alt="Quapni 品牌形象 APP"
             />
             <figcaption class="hidden"></figcaption>
           </figure>
