- 新增精選專案案例

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <figure>
             <img
               class="w-full"
-              src="./images/project/banner/Donutes POS.png"
+              src="./images/project/banner/Donutes_POS.png"
               alt="Donutes 飲料業 POS"
             />
             <figcaption class="hidden"></figcaption>
@@ -138,6 +138,22 @@
               class="w-full"
               src="./images/project/banner/Taipei dbas.png"
               alt="臺北市預算查詢平台"
+            />
+            <figcaption class="hidden"></figcaption>
+          </figure>
+          <figure>
+            <img
+              class="w-full"
+              src="./images/project/banner/ftvnews_app.png"
+              alt="民視新聞 APP"
+            />
+            <figcaption class="hidden"></figcaption>
+          </figure>
+          <figure>
+            <img
+              class="w-full"
+              src="./images/project/banner/Hi-Life_app.png"
+              alt="萊爾富雲端冰箱 APP"
             />
             <figcaption class="hidden"></figcaption>
           </figure>
