- 爆料的案例 先隱藏

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <hr class="bg-black" width="60" />
         </div>
         <div class="flex flex-col gap-10">
-          <figure>
+          <!-- <figure>
             <a
               href="https://web.bc3ts.net/"
               target="_blank"
@@ -92,7 +92,7 @@
               />
             </a>
             <figcaption class="hidden"></figcaption>
-          </figure>
+          </figure> -->
           <figure>
             <img
               class="w-full"
